--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <title>Projects Home</title>
 
-<img src="placeholder image 377x259.svg" alt="missing" height="100" width="100">
+<img src="placeholder image 377x259.svg" alt="missing" height="100px" width="100px">
 
 </html>
